# common

./: .gitmodules  CMakeLists.txt  README.md
src/supermarx/: CMakeLists.txt  confidence.hpp  datetime.hpp  datetime_read.hpp  datetime_write.hpp  id_t.hpp  measure.hpp  normalized_price.hpp  product.hpp  qualified.hpp  raw.hpp  reference.hpp  token.hpp
src/supermarx/api/: CMakeLists.txt  add_product.hpp  add_product_image_citation.hpp  api.cpp  api.hpp  client.cpp  client.hpp  exception.hpp  product_history.hpp  product_log.hpp  product_summary.hpp  session.hpp  session_operations.hpp  tag.hpp
src/supermarx/data/: imagecitation.hpp  karluser.hpp  product.hpp  productclass.hpp  productdetails.hpp  productdetailsrecord.hpp  productlog.hpp  session.hpp  sessionticket.hpp  supermarket.hpp  tag.hpp  tagalias.hpp  tagcategory.hpp  tagcategoryalias.hpp
src/supermarx/message/: add_product.hpp  add_product_image_citation.hpp  exception.hpp  product_base.hpp  product_history.hpp  product_log.hpp  product_summary.hpp  productclass_summary.hpp  session.hpp  tag.hpp
src/supermarx/scraper/: CMakeLists.txt  scraper_cli.hpp  scraper_prototype.hpp
src/supermarx/serialization/: CMakeLists.txt  deserialize_fusion.hpp  deserializer.cpp  deserializer.hpp  json_serializer.cpp  json_serializer.hpp  msgpack_compact_serializer.cpp  msgpack_compact_serializer.hpp  msgpack_deserializer.cpp  msgpack_deserializer.hpp  msgpack_serializer.cpp  msgpack_serializer.hpp  serialize_fusion.hpp  serializer.cpp  serializer.hpp  xml_serializer.cpp  xml_serializer.hpp
src/supermarx/util/: CMakeLists.txt  base16.hpp  base64.hpp  cached_downloader.hpp  download_manager.hpp  downloader.cpp  downloader.hpp  guard.hpp  stubborn.hpp  timer.hpp
